cabal-version: 3.0
name: parcel
version: 0.0.1.0
-- synopsis: 
-- description:
category: Control
homepage: https://github.com/Zankoku Okuno/parcel
bug-reports: https://github.com/Zankoku Okuno/parcel/issues
author: Zankoku Okuno
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Zankoku Okuno
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Control.Parcel
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , mtl >=2
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , parcel
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , parcel
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2
